fix(Activity list): change cursor to pointer on visibility form hover (cherry picked from commit 065b689)

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -3606,6 +3606,7 @@ a.disabled {
 .formThumbnail,
 .formIconWrap {
   display: inline-block;
+  cursor: pointer;
 }
 .formThumbnail:before,
 .formIconWrap:before,
